<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0                        http://maven.apache.org/maven-v4_0_0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>com.linagora.obm</groupId>
	<artifactId>parent</artifactId>
	<packaging>pom</packaging>
	<version>obm-sync-opush-SNAPSHOT</version>
	<name>obm-sync and opush 2.4 parent project</name>

	<properties>
		<obm-sync-client.version>2.4.0-SNAPSHOT</obm-sync-client.version>		
		<obm-sync-common.version>2.4.0-SNAPSHOT</obm-sync-common.version>		
		<obm-sync-locator.version>2.4.0-SNAPSHOT</obm-sync-locator.version>		
		<obm-sync-message-queue.version>2.4.0-SNAPSHOT</obm-sync-message-queue.version>	
		<obm-sync-services.version>2.4.0-SNAPSHOT</obm-sync-services.version>		

		<dbcp.version>2.4-SNAPSHOT</dbcp.version>
		<utils.version>2.4-SNAPSHOT</utils.version>

		<postgresql.version>9.0-801.jdbc4</postgresql.version>
		<mysql-connector-java.version>5.1.16</mysql-connector-java.version>

		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<hornetq.version>2.2.2.Final</hornetq.version>
		<junit.version>4.8.2</junit.version>
		<easymock.version>3.0</easymock.version>
		<guava.version>r09</guava.version>
		<commons-httpclient.version>3.1</commons-httpclient.version>
		<commons-io.version>2.0.1</commons-io.version>
		<jms.version>1.1</jms.version>
		<netty.version>3.2.4.Final</netty.version>		
		<ical4j.version>1.0-rc3</ical4j.version>
		<jta.version>1.1</jta.version>
		<commons-lang.version>2.6</commons-lang.version>
		<slf4j.version>1.5.8</slf4j.version>
		<servlet-api.version>2.5</servlet-api.version>
		<mail.version>1.4.4</mail.version>
		<freemarker.version>2.3.18</freemarker.version>
		<jsoup.version>1.5.2</jsoup.version>
		<guice.version>3.0</guice.version>
		<apache-mime4j.version>0.6.1</apache-mime4j.version>
	</properties>

	<repositories>
		<repository>
			<id>central</id>
			<url>http://hudson-obm.linagora.com:8081/artifactory/repo</url>
			<snapshots>
				<enabled>false</enabled>
			</snapshots>
		</repository>
		<repository>
			<id>snapshots</id>
			<url>http://hudson-obm.linagora.com:8081/artifactory/repo</url>
			<releases>
				<enabled>false</enabled>
			</releases>
		</repository>
	</repositories>

	<modules>
		<module>common</module>
		<module>client</module>
		<module>services</module>
		<module>locator</module>
		<module>message-queue</module>
		<module>opush</module>	
		<module>configuration</module>
		<module>obm-locator</module>
		<module>utils</module>
		<module>dbcp</module>
	</modules>

	<build>
		<pluginManagement>
			<plugins>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-surefire-plugin</artifactId>
 					<version>2.8.1</version>
					<configuration>
					<argLine>-Xms512m -Xmx512m -XX:MaxPermSize=128M</argLine>
					</configuration>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-compiler-plugin</artifactId>
					<version>2.3.2</version>
					<configuration>
						<source>1.6</source>
						<target>1.6</target>
					</configuration>
				</plugin>

				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-eclipse-plugin</artifactId>
					<version>2.8</version>
					<configuration>
						<buildOutputDirectory>eclipse-build</buildOutputDirectory>
						<downloadJavadocs>true</downloadJavadocs>
						<downloadSources>true</downloadSources>
						<projectNameTemplate>[artifactId]-[version]</projectNameTemplate>
						<additionalConfig>
							<file>
								<name>.settings/org.eclipse.jdt.core.prefs</name>
								<content>
								<![CDATA[org.eclipse.jdt.core.codeComplete.fieldPrefixes=
org.eclipse.jdt.core.compiler.codegen.inlineJsrBytecode=enabled
org.eclipse.jdt.core.compiler.problem.incompleteEnumSwitch=warning
org.eclipse.jdt.core.compiler.problem.redundantNullCheck=warning
org.eclipse.jdt.core.compiler.problem.potentialNullReference=warning
org.eclipse.jdt.core.compiler.problem.parameterAssignment=ignore
org.eclipse.jdt.core.compiler.problem.undocumentedEmptyBlock=ignore
org.eclipse.jdt.core.compiler.source=1.6
org.eclipse.jdt.core.codeComplete.staticFieldSuffixes=
org.eclipse.jdt.core.compiler.problem.unusedParameter=warning
org.eclipse.jdt.core.compiler.problem.unnecessaryElse=ignore
org.eclipse.jdt.core.codeComplete.visibilityCheck=enabled
org.eclipse.jdt.core.compiler.problem.missingSerialVersion=ignore
org.eclipse.jdt.core.compiler.compliance=1.6
org.eclipse.jdt.core.compiler.problem.missingHashCodeMethod=warning
org.eclipse.jdt.core.compiler.problem.emptyStatement=warning
org.eclipse.jdt.core.compiler.problem.enumIdentifier=error
org.eclipse.jdt.core.codeComplete.localSuffixes=
org.eclipse.jdt.core.compiler.problem.unnecessaryTypeCheck=warning
org.eclipse.jdt.core.compiler.problem.possibleAccidentalBooleanAssignment=error
org.eclipse.jdt.core.compiler.problem.assertIdentifier=error
org.eclipse.jdt.core.compiler.problem.fieldHiding=warning
org.eclipse.jdt.core.codeComplete.argumentSuffixes=
org.eclipse.jdt.core.compiler.codegen.targetPlatform=1.6
org.eclipse.jdt.core.compiler.problem.unusedParameterIncludeDocCommentReference=disabled
org.eclipse.jdt.core.codeComplete.staticFieldPrefixes=
org.eclipse.jdt.core.compiler.problem.unusedDeclaredThrownExceptionIncludeDocCommentReference=disabled
org.eclipse.jdt.core.compiler.problem.missingSynchronizedOnInheritedMethod=warning
org.eclipse.jdt.core.compiler.problem.unusedObjectAllocation=warning
org.eclipse.jdt.core.compiler.problem.redundantSuperinterface=ignore
org.eclipse.jdt.core.codeComplete.staticFinalFieldSuffixes=
org.eclipse.jdt.core.compiler.problem.localVariableHiding=ignore
org.eclipse.jdt.core.codeComplete.localPrefixes=
eclipse.preferences.version=1
org.eclipse.jdt.core.compiler.problem.unusedDeclaredThrownExceptionExemptExceptionAndThrowable=disabled
org.eclipse.jdt.core.codeComplete.fieldSuffixes=
org.eclipse.jdt.core.codeComplete.argumentPrefixes=
org.eclipse.jdt.core.compiler.problem.fallthroughCase=warning
org.eclipse.jdt.core.compiler.problem.unusedDeclaredThrownException=warning
org.eclipse.jdt.core.compiler.problem.noEffectAssignment=error
org.eclipse.jdt.core.codeComplete.staticFinalFieldPrefixes=]]>
								</content>
							</file>
						</additionalConfig>
					</configuration>
				</plugin>
				
				<plugin>
					<groupId>org.mortbay.jetty</groupId>
					<artifactId>maven-jetty-plugin</artifactId>
					<version>6.1.26</version>
					<configuration>
						<scanIntervalSeconds>10</scanIntervalSeconds>
						<stopKey>foo</stopKey>
						<stopPort>9999</stopPort>
						<connectors>
							<connector implementation="org.mortbay.jetty.nio.SelectChannelConnector">
								<port>8083</port>
								<maxIdleTime>60000</maxIdleTime>
							</connector>
						</connectors>
					</configuration>
				</plugin>

			</plugins>
		</pluginManagement>
	</build>

	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>org.slf4j</groupId>
				<artifactId>slf4j-log4j12</artifactId>
				<version>${slf4j.version}</version>
			</dependency>
			<dependency>
				<groupId>ch.qos.logback</groupId>
				<artifactId>logback-core</artifactId>
				<version>0.9.29</version>
			</dependency>
			<dependency>
				<groupId>ch.qos.logback</groupId>
				<artifactId>logback-classic</artifactId>
				<version>0.9.29</version>
			</dependency>
			<dependency>
				<groupId>ch.qos.logback</groupId>
				<artifactId>logback-access</artifactId>
				<version>0.9.29</version>
			</dependency>
			<dependency>
				<groupId>org.slf4j</groupId>
				<artifactId>jcl-over-slf4j</artifactId>
				<version>${slf4j.version}</version>
			</dependency>
			<dependency>
				<groupId>org.slf4j</groupId>
				<artifactId>slf4j-api</artifactId>
				<version>${slf4j.version}</version>
			</dependency>
			<dependency>
				<groupId>org.slf4j</groupId>
				<artifactId>jul-to-slf4j</artifactId>
				<version>${slf4j.version}</version>
			</dependency>
			<dependency>
				<groupId>javax.servlet</groupId>
				<artifactId>servlet-api</artifactId>
				<version>${servlet-api.version}</version>
				<scope>provided</scope>
			</dependency>
			<dependency>
				<groupId>javax.mail</groupId>
				<artifactId>mail</artifactId>
				<version>${mail.version}</version>
			</dependency>
			<dependency>
				<groupId>org.freemarker</groupId>
				<artifactId>freemarker</artifactId>
				<version>${freemarker.version}</version>
			</dependency>
			<dependency>
				<groupId>postgresql</groupId>
				<artifactId>postgresql</artifactId>
				<version>${postgresql.version}</version>
			</dependency>
			<dependency>
				<groupId>mysql</groupId>
				<artifactId>mysql-connector-java</artifactId>
				<version>${mysql-connector-java.version}</version>
			</dependency>
			<dependency>
				<groupId>org.jsoup</groupId>
				<artifactId>jsoup</artifactId>
				<version>${jsoup.version}</version>
				<scope>test</scope>
			</dependency>
			<dependency>
				<groupId>com.google.inject</groupId>
				<artifactId>guice</artifactId>
				<version>${guice.version}</version>
			</dependency>
			<dependency>
				<groupId>net.fortuna.ical4j</groupId>
				<artifactId>ical4j</artifactId>
				<version>${ical4j.version}</version>
				<exclusions>
					<exclusion>
						<groupId>commons-logging</groupId>
						<artifactId>commons-logging</artifactId>
					</exclusion>
				</exclusions>
			</dependency>
			<dependency>
				<groupId>javax.transaction</groupId>
				<artifactId>jta</artifactId>
				<version>${jta.version}</version>
			</dependency>
			<dependency>
				<groupId>commons-codec</groupId>
				<artifactId>commons-codec</artifactId>
				<version>1.5</version>
			</dependency>
			<dependency>
				<groupId>commons-lang</groupId>
				<artifactId>commons-lang</artifactId>
				<version>${commons-lang.version}</version>
			</dependency>
			<dependency>
				<groupId>javax.jms</groupId>
				<artifactId>jms</artifactId>
				<version>${jms.version}</version>
			</dependency>
			<dependency>
				<groupId>org.jboss.netty</groupId>
				<artifactId>netty</artifactId>
				<version>${netty.version}</version>
			</dependency>			
			<dependency>
				<groupId>junit</groupId>
				<artifactId>junit</artifactId>
				<version>${junit.version}</version>
				<scope>test</scope>
			</dependency>
			<dependency>
				<groupId>org.easymock</groupId>
				<artifactId>easymock</artifactId>
				<version>${easymock.version}</version>
				<scope>test</scope>
			</dependency>
			<dependency>
				<groupId>org.hornetq</groupId>
				<artifactId>hornetq-core</artifactId>
				<version>${hornetq.version}</version>
			</dependency>
			<dependency>
				<groupId>org.hornetq</groupId>
				<artifactId>hornetq-jms</artifactId>
				<version>${hornetq.version}</version>
			</dependency>
			<dependency>
				<groupId>org.hornetq</groupId>
				<artifactId>hornetq-jms-client</artifactId>
				<version>${hornetq.version}</version>
			</dependency>
			<dependency>
				<groupId>org.hornetq</groupId>
				<artifactId>hornetq-logging</artifactId>
				<version>${hornetq.version}</version>
			</dependency>
			<dependency>
				<groupId>org.hornetq</groupId>
				<artifactId>hornetq-core-client</artifactId>
				<version>${hornetq.version}</version>
			</dependency>
			<dependency>
				<groupId>com.google.guava</groupId>
				<artifactId>guava</artifactId>
				<version>${guava.version}</version>
			</dependency>
			<dependency>
				<groupId>com.google.inject</groupId>
				<artifactId>guice</artifactId>
				<version>${guice.version}</version>
			</dependency>
			<dependency>
				<groupId>commons-httpclient</groupId>
				<artifactId>commons-httpclient</artifactId>
				<version>${commons-httpclient.version}</version>
				<exclusions>
					<exclusion>
						<groupId>commons-logging</groupId>
						<artifactId>commons-logging</artifactId>
					</exclusion>
				</exclusions>
			</dependency>
			<dependency>
				<groupId>commons-io</groupId>
				<artifactId>commons-io</artifactId>
				<version>${commons-io.version}</version>
			</dependency>
			<dependency>
				<groupId>org.apache.james</groupId>
				<artifactId>apache-mime4j</artifactId>
				<version>${apache-mime4j.version}</version>
				<exclusions>
					<exclusion>
						<groupId>commons-logging</groupId>
						<artifactId>commons-logging</artifactId>
					</exclusion>
				</exclusions>
			</dependency>
		</dependencies>
	</dependencyManagement>
</project>
